2003-11-03  Derek Price  <derek@ximbiot.com>

	* configure.in (AM_INIT_AUTOMAKE): Require Automake 1.7.5.

2003-11-03  Derek Price  <derek@ximbiot.com>

	* INSTALL: Add some notes on Autoconf requirements.

2003-11-03  Derek Price  <derek@ximbiot.com>

	* Makefile.in: Regenerated.

2003-11-03  Mark D. Baushke  <mdb@cvshome.org>

	* Makefile.am (ACLOCAL_AMFLAGS): autoreconf does not understand
	what to do with $(srcdir) so remove it -- autoreconf needs to be
	done in the srcdir in order to regenerate all the files properly
	in any case.

	* configure.in (AM_GNU_GETTEXT_VERSION): Add to allow autoreconf
	to regenerate files instead of using the incantation:
	'aclocal -I m4 && autoconf && automake && autoheader' to do the
	same thing as 'autoreconf' should do.

2003-11-03  Derek Price  <derek@ximbiot.com>

	* NEWS: Note that we're better at detecting ZLIB versions now.

2003-11-03  Derek Price  <derek@ximbiot.com>

	* aclocal.m4, configure: Regenerated.

2003-11-03  Derek Price  <derek@ximbiot.com>

	* NEWS: Note that server ignores `-l' rather than rejecting it with a
	fatal error.

2003-10-31  Derek Price  <derek@ximbiot.com>

	* INSTALL: Note Cygwin as an option for building CVS under Windows.

2003-10-31  Derek Price  <derek@ximbiot.com>

	* INSTALL: s/cvsgui/wincvs/.

2003-10-27  Derek Price  <derek@ximbiot.com>

	* configure.in: Move case sensitivity test to the enable-* section and
	allow override via command line switch.
	* NEWS: Update last news item to reflect new command line switch.
	* configure, config.h.in: Regenerated.

2003-10-27  Derek Price  <derek@ximbiot.com>

	* configure.in: Add new test for a case insensitive file system.
	* configure, config.h.in: Regenerated.
	* NEWS: Note the above change.

2003-10-27  Derek Price  <derek@ximbiot.com>

	* configure.in: Update version to 1.12.2.1.
	* NEWS (Changes since 1.12.2): New section.
	* configure: Regenerated.

2003-10-27  Derek Price  <derek@ximbiot.com>

	* configure.in: Update version to 1.12.2.