@@ -1,4 +1,4 @@
-@set UPDATED 30 October 2003
-@set UPDATED-MONTH October 2003
+@set UPDATED 10 November 2003
+@set UPDATED-MONTH November 2003
 @set EDITION 1.12.2.1
 @set VERSION 1.12.2.1
