@@ -1,3 +1,7 @@
+2003-11-10  Derek Price  <derek@ximbiot.com>
+
+	* stamp-vti, version.texi: Regenerated.
+
 2003-11-07  Mark D. Baushke  <mdb@cvshome.org>
 
 	* cvs.texinfo (CVS commands): Fix typo.
