@@ -1,3 +1,10 @@
+2003-11-10  Derek Price  <derek@ximbiot.com>
+
+	* sanity.sh (rmadd3): New tests that confirms that CVS refuses to
+	delete a file it thinks was already removed.
+	(Report and test from Andreas Reifschneider
+	<andyreif@studcs.uni-sb.de>.)
+
 2003-11-03  Derek Price  <derek@ximbiot.com>
 
 	* sanity.sh (server): Test that the global `-l' option is ignored
