@@ -1,3 +1,8 @@
+2003-11-04  Derek Price  <derek@ximbiot.com>
+
+	* configure.in: Add some more help text for --enable-case-sensitivity.
+	* configure: Regenerated.
+
 2003-11-03  Derek Price  <derek@ximbiot.com>
 
 	* configure.in (AM_INIT_AUTOMAKE): Require Automake 1.7.5.
